--- a/index.html
+++ b/index.html
@@ -1,44 +1,51 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-  <meta charset="utf-8" />
-  <title>Mapa Interativo - Ambev</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8" />
+    <title>Mapa Interativo - Ambev</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/choices.js/public/assets/styles/choices.min.css" />
-  <style>
-    * { box-sizing: border-box; }
-    html, body { margin: 0; padding: 0; font-family: Arial, sans-serif; }
-    #map { height: 100vh; width: 100vw; }
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/choices.js/public/assets/styles/choices.min.css" />
 
-    .filtros {
-      position: absolute;
-      top: 10px;
-      left: 10px;
-      z-index: 1000;
-      display: flex;
-      flex-direction: column;
-      gap: 6px;
-      background: rgba(255,255,255,0.85);
-      padding: 10px;
-      border-radius: 10px;
-    }
+    <style>
+        body {
+            margin: 0;
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen;
+        }
+        #map { height: 90vh; width: 100%; }
 
-    .choices__inner {
-      min-height: 32px;
-      font-size: 12px;
-    }
+        .filtros {
+            position: absolute;
+            top: 10px;
+            left: 10px;
+            z-index: 1000;
+            display: flex;
+            flex-direction: column;
+            gap: 6px;
+        }
 
-    .heat-toggle {
-      margin-top: 6px;
-      padding: 6px;
-      font-size: 13px;
-      background: #eee;
-      border: 1px solid #ccc;
-      border-radius: 6px;
-      cursor: pointer;
-    }
+        .filtros select {
+            font-size: 12px;
+            width: 160px;
+            border-radius: 12px;
+            border: 1px solid #ccc;
+            padding: 4px 8px;
+            box-shadow: 0 1px 2px rgba(0,0,0,0.1);
+            background-color: #f7f7f7;
+        }
+
+        .choices__inner {
+            border-radius: 10px !important;
+            background-color: #f7f7f7 !important;
+            font-size: 11px;
+            min-height: 32px;
+            box-shadow: 0 1px 2px rgba(0,0,0,0.1) !important;
+        }
+
+        .choices[data-type*=select-multiple] .choices__button {
+            font-size: 9px;
+        }
 
         #legenda {
             position: absolute;
@@ -88,123 +95,138 @@
         Total: Azul
     </div>
 
-<script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/papaparse@5.3.2/papaparse.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/leaflet.heat/dist/leaflet-heat.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/choices.js/public/assets/scripts/choices.min.js"></script>
-<script>
-const url = 'https://raw.githubusercontent.com/marianarizzo/siteambev/main/Planner%20CSV.csv';
-const map = L.map('map').setView([-15.7797, -47.9297], 5);
-L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png').addTo(map);
-const grupoMarcadores = L.layerGroup().addTo(map);
-let heatLayer;
-let dadosGlobal = [];
+    <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
+    <script src="https://unpkg.com/leaflet.heat/dist/leaflet-heat.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/papaparse@5.3.2/papaparse.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/choices.js/public/assets/scripts/choices.min.js"></script>
 
-const filtros = {
-  CDD: new Choices('#filtroCDD', { removeItemButton: true }),
-  GN: new Choices('#filtroGN', { removeItemButton: true }),
-  Inplant: new Choices('#filtroInplant', { removeItemButton: true }),
-  Rede: new Choices('#filtroRede', { removeItemButton: true }),
-  Dia: new Choices('#filtroDia', { removeItemButton: true })
-};
+    <script>
+        const url = 'https://raw.githubusercontent.com/marianarizzo/siteambev/main/Planner%20CSV.csv';
+        const map = L.map('map').setView([-15.7797, -47.9297], 5);
+        L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png').addTo(map);
+        const grupoMarcadores = L.layerGroup().addTo(map);
+        let heatLayer;
 
-const coresPorDia = {
-  'Agenda': 'green', 'Segunda': 'red', 'Terça': 'orange',
-  'Quarta': 'gold', 'Quinta': 'purple', 'Sexta': 'black', 'Sábado': 'gray', 'Total': 'blue'
-};
+        const filtros = {
+            CDD: new Choices('#filtroCDD', { removeItemButton: true, placeholderValue: 'Escolha o CDD' }),
+            GN: new Choices('#filtroGN', { removeItemButton: true, placeholderValue: 'Filtrar por GN' }),
+            Inplant: new Choices('#filtroInplant', { removeItemButton: true, placeholderValue: 'Filtrar por Inplant' }),
+            Rede: new Choices('#filtroRede', { removeItemButton: true, placeholderValue: 'Filtrar por Rede' }),
+            Dia: new Choices('#filtroDia', { removeItemButton: true, placeholderValue: 'Dia da Semana' })
+        };
 
-function preencherFiltros(dados, chave, controle) {
-  const valores = [...new Set(dados.map(d => d[chave]).filter(Boolean))].sort();
-  controle.clearChoices();
-  controle.setChoices(valores.map(v => ({ value: v, label: v })), 'value', 'label', true);
-}
+        const coresPorDia = {
+            'Agenda': 'green',
+            'Segunda': 'red',
+            'Terça': 'orange',
+            'Quarta': 'yellow',
+            'Quinta': 'purple',
+            'Sexta': 'black',
+            'Sábado': 'gray',
+            'Total': 'blue'
+        };
 
-function atualizarMapa(dados) {
-  grupoMarcadores.clearLayers();
-  const cdd = filtros.CDD.getValue(true);
-  const gn = filtros.GN.getValue(true);
-  const inplant = filtros.Inplant.getValue(true);
-  const rede = filtros.Rede.getValue(true);
-  const diasSelecionados = filtros.Dia.getValue(true);
-  const pontosHeat = [];
-
-  dados.forEach(d => {
-    const lat = parseFloat(d['LAT']);
-    const lon = parseFloat(d['LONG']);
-    if (isNaN(lat) || isNaN(lon)) return;
-
-    const cddValido = cdd.length === 0 || cdd.includes(d['CDD']);
-    const gnValido = gn.length === 0 || gn.includes(d['GN']);
-    const inplantValido = inplant.length === 0 || inplant.includes(d['Inplant']);
-    const redeValido = rede.length === 0 || rede.includes(d['Rede']);
-    let diaValido = false;
-    let cor = 'blue';
-
-    if (diasSelecionados.length === 0) {
-      const dias = ['Segunda','Terça','Quarta','Quinta','Sexta','Sábado'];
-      for (let dia of dias) {
-        if (d[dia]?.trim() === '1') {
-          cor = coresPorDia[dia];
-          diaValido = true;
-          break;
+        function preencherFiltros(dados, chave, controle) {
+            const valores = [...new Set(dados.map(d => d[chave]).filter(Boolean))].sort();
+            controle.clearChoices();
+            controle.setChoices(valores.map(v => ({ value: v, label: v })), 'value', 'label', true);
         }
-      }
-    } else {
-      for (let dia of diasSelecionados) {
-        if (d[dia]?.trim() === '1') {
-          cor = coresPorDia[dia];
-          diaValido = true;
-          break;
+
+        function atualizarMapa(dados) {
+            grupoMarcadores.clearLayers();
+            if (heatLayer) map.removeLayer(heatLayer);
+            let heatData = [];
+
+            const cdd = filtros.CDD.getValue(true);
+            const gn = filtros.GN.getValue(true);
+            const inplant = filtros.Inplant.getValue(true);
+            const rede = filtros.Rede.getValue(true);
+            const diasSelecionados = filtros.Dia.getValue(true);
+
+            dados.forEach(d => {
+                const lat = parseFloat(d['LAT']);
+                const lon = parseFloat(d['LONG']);
+                if (isNaN(lat) || isNaN(lon)) return;
+
+                const cddValido = cdd.length === 0 || cdd.includes(d['CDD']);
+                const gnValido = gn.length === 0 || gn.includes(d['GN']);
+                const inplantValido = inplant.length === 0 || inplant.includes(d['Inplant']);
+                const redeValido = rede.length === 0 || rede.includes(d['Rede']);
+
+                let diaValido = false;
+                let cor = 'blue';
+
+                if (diasSelecionados.length === 0) {
+                    const dias = ['Segunda','Terça','Quarta','Quinta','Sexta','Sábado'];
+                    for (let dia of dias) {
+                        if (d[dia]?.trim() === '1') {
+                            cor = coresPorDia[dia];
+                            diaValido = true;
+                            break;
+                        }
+                    }
+                } else {
+                    for (let dia of diasSelecionados) {
+                        if (d[dia]?.trim() === '1') {
+                            cor = coresPorDia[dia];
+                            diaValido = true;
+                            break;
+                        }
+                    }
+                    if (!diaValido && diasSelecionados.includes('Agenda')) {
+                        const isAgenda = ['Segunda','Terça','Quarta','Quinta','Sexta','Sábado'].every(dia => d[dia]?.trim() === '1');
+                        if (isAgenda) {
+                            diaValido = true;
+                            cor = coresPorDia['Agenda'];
+                        }
+                    }
+                }
+
+                if (cddValido && gnValido && inplantValido && redeValido && diaValido) {
+                    heatData.push([lat, lon, 1]);
+                    const marker = L.circleMarker([lat, lon], {
+                        radius: 6,
+                        color: cor,
+                        fillColor: cor,
+                        fillOpacity: 0.8,
+                        weight: 1
+                    }).bindPopup(`<b>${d['Nome']}</b><br>CDD: ${d['CDD']}<br>GN: ${d['GN']}<br>Inplant: ${d['Inplant']}<br>Rede: ${d['Rede']}`);
+                    grupoMarcadores.addLayer(marker);
+                }
+            });
+
+            heatLayer = L.heatLayer(heatData, {radius: 25, blur: 15, maxZoom: 10});
         }
-      }
-      if (!diaValido && diasSelecionados.includes('Agenda')) {
-        const isAgenda = ['Segunda','Terça','Quarta','Quinta','Sexta','Sábado'].every(dia => d[dia]?.trim() === '1');
-        if (isAgenda) {
-          diaValido = true;
-          cor = coresPorDia['Agenda'];
-        }
-      }
-    }
 
-    if (cddValido && gnValido && inplantValido && redeValido && diaValido) {
-      const marker = L.circleMarker([lat, lon], {
-        radius: 6, color: cor, fillColor: cor, fillOpacity: 0.8, weight: 1
-      }).bindPopup(`<b>${d['Nome']}</b><br>CDD: ${d['CDD']}<br>GN: ${d['GN']}<br>Inplant: ${d['Inplant']}<br>Rede: ${d['Rede']}`);
-      grupoMarcadores.addLayer(marker);
-      pontosHeat.push([lat, lon, 0.7]);
-    }
-  });
+        Papa.parse(url, {
+            download: true,
+            header: true,
+            complete: results => {
+                const dados = results.data;
 
-  if (heatLayer) map.removeLayer(heatLayer);
-  if (document.body.classList.contains('heat-active')) {
-    heatLayer = L.heatLayer(pontosHeat, { radius: 20 }).addTo(map);
-  }
-}
+                preencherFiltros(dados, 'CDD', filtros.CDD);
+                preencherFiltros(dados, 'GN', filtros.GN);
+                preencherFiltros(dados, 'Inplant', filtros.Inplant);
+                preencherFiltros(dados, 'Rede', filtros.Rede);
 
-document.getElementById('heatToggle').addEventListener('click', () => {
-  document.body.classList.toggle('heat-active');
-  atualizarMapa(dadosGlobal);
-});
+                const diasSemana = ['Agenda','Segunda', 'Terça', 'Quarta', 'Quinta', 'Sexta', 'Sábado'];
+                filtros.Dia.clearChoices();
+                filtros.Dia.setChoices(diasSemana.map(d => ({ value: d, label: d })), 'value', 'label', true);
 
-Papa.parse(url, {
-  download: true,
-  header: true,
-  complete: results => {
-    const dados = results.data;
-    dadosGlobal = dados;
-    preencherFiltros(dados, 'CDD', filtros.CDD);
-    preencherFiltros(dados, 'GN', filtros.GN);
-    preencherFiltros(dados, 'Inplant', filtros.Inplant);
-    preencherFiltros(dados, 'Rede', filtros.Rede);
-    const diasSemana = ['Agenda','Segunda', 'Terça', 'Quarta', 'Quinta', 'Sexta', 'Sábado'];
-    filtros.Dia.clearChoices();
-    filtros.Dia.setChoices(diasSemana.map(d => ({ value: d, label: d })), 'value', 'label', true);
-    atualizarMapa(dados);
-    Object.values(filtros).forEach(f => {
-      f.passedElement.element.addEventListener('change', () => atualizarMapa(dados));
-    });
-  }
-});
-</script>
+                atualizarMapa(dados);
+                Object.values(filtros).forEach(f => {
+                    f.passedElement.element.addEventListener('change', () => atualizarMapa(dados));
+                });
+
+                document.getElementById('botaoHeatmap').addEventListener('click', () => {
+                    if (map.hasLayer(heatLayer)) {
+                        map.removeLayer(heatLayer);
+                    } else {
+                        heatLayer.addTo(map);
+                    }
+                });
+            }
+        });
+    </script>
 </body>
 </html>
