--- a/index.html
+++ b/index.html
@@ -84,17 +84,16 @@
     <button id="botaoHeatmap">Ativar Heatmap</button>
     <div id="map"></div>
     <div id="legenda">
-        <b>Legenda:</b><br>
-        Agenda: Verde<br>
-        Segunda: Vermelho<br>
-        Terça: Laranja<br>
-        Quarta: Amarelo<br>
-        Quinta: Roxo<br>
-        Sexta: Preto<br>
-        Sábado: Cinza<br>
-        Total: Azul
-    </div>
-
+  <b>Legenda:</b>
+  <span style="color:green">● Agenda</span> |
+  <span style="color:red">● Segunda</span> |
+  <span style="color:orange">● Terça</span> |
+  <span style="color:gold">● Quarta</span> |
+  <span style="color:purple">● Quinta</span> |
+  <span style="color:black">● Sexta</span> |
+  <span style="color:gray">● Sábado</span> |
+  <span style="color:#f60">🔥 Heatmap</span>
+</div>
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
     <script src="https://unpkg.com/leaflet.heat/dist/leaflet-heat.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/papaparse@5.3.2/papaparse.min.js"></script>
