--- a/index.html
+++ b/index.html
@@ -20,9 +20,8 @@
             top: 10px;
             left: 10px;
             z-index: 1000;
-            display: flex;
-            flex-direction: column;
-            gap: 6px;
+           padding: 10px;
+      border-radius: 10px;
         }
 
         .filtros select {
