--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <title>Mapa Interativo - Ambev</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/choices.js/public/assets/styles/choices.min.css" />
 
@@ -20,8 +20,8 @@
             top: 12px;
             left: 12px;
             z-index: 1000;
-           padding: 12px;
-      border-radius: 12px;
+            padding: 12px;
+            border-radius: 12px;
         }
 
         .filtros select {
@@ -40,6 +40,12 @@
             font-size: 10px;
             min-height: 32px;
             box-shadow: 0 1px 2px rgba(0,0,0,0.1) !important;
+            white-space: nowrap !important;
+        }
+
+        .choices__list--multiple .choices__item {
+            font-size: 10px;
+            white-space: nowrap !important;
         }
 
         .choices[data-type*=select-multiple] .choices__button {
@@ -48,14 +54,47 @@
 
         #legenda {
             position: absolute;
-            bottom: 10px;
-            left: 10px;
-            background-color: white;
+            top: 12px;
+            right: 12px;
+            background-color: transparent;
             padding: 6px 10px;
             border-radius: 10px;
             font-size: 11px;
-            box-shadow: 0 0 4px rgba(0,0,0,0.1);
+            color: #333;
         }
+
+        #legenda span {
+            margin-right: 10px;
+            display: inline-block;
+        }
+    </style>
+</head>
+<body>
+    <div class="filtros">
+        <select id="filtroCDD" multiple></select>
+        <select id="filtroGN" multiple></select>
+        <select id="filtroInplant" multiple></select>
+        <select id="filtroRede" multiple></select>
+        <select id="filtroDia" multiple></select>
+    </div>
+    <div id="map"></div>
+    <div id="legenda">
+        <span style="color: green;"><b>•</b> Agenda</span>
+        <span style="color: red;"><b>•</b> Segunda</span>
+        <span style="color: orange;"><b>•</b> Terça</span>
+        <span style="color: yellow;"><b>•</b> Quarta</span>
+        <span style="color: purple;"><b>•</b> Quinta</span>
+        <span style="color: black;"><b>•</b> Sexta</span>
+        <span style="color: gray;"><b>•</b> Sábado</span>
+        <span style="color: orangered;"><b>🔥</b> Heatmap</span>
+    </div>
+
+    <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/papaparse@5.3.2/papaparse.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/choices.js/public/assets/scripts/choices.min.js"></script>
+</body>
+</html>
+
 
         #botaoHeatmap {
             position: absolute;
