--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             font-size: 9px;
         }
 
-        #legenda {
+    #legenda {
             position: absolute;
             top: 12px;
             right: 12px;
@@ -58,6 +58,11 @@
             border-radius: 10px;
             font-size: 11px;
             color: #333;
+        }
+
+        #legenda span {
+            margin-right: 10px;
+            display: inline-block;
         }
 
       
@@ -83,49 +88,6 @@
         <span style="color: orangered;"><b>🔥</b> Heatmap</span>
     </div>
 
-    <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/papaparse@5.3.2/papaparse.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/choices.js/public/assets/scripts/choices.min.js"></script>
-</body>
-</html>
-
-
-        #botaoHeatmap {
-            position: absolute;
-            top: 10px;
-            right: 10px;
-            z-index: 1000;
-            background-color: white;
-            border: 1px solid #ccc;
-            padding: 6px 12px;
-            border-radius: 10px;
-            cursor: pointer;
-            font-size: 12px;
-            box-shadow: 0 1px 2px rgba(0,0,0,0.15);
-        }
-    </style>
-</head>
-<body>
-    <div class="filtros">
-        <select id="filtroCDD" multiple></select>
-        <select id="filtroGN" multiple></select>
-        <select id="filtroInplant" multiple></select>
-        <select id="filtroRede" multiple></select>
-        <select id="filtroDia" multiple></select>
-    </div>
-    <button id="botaoHeatmap">Ativar Heatmap</button>
-    <div id="map"></div>
-    <div id="legenda">
-  <b>Legenda:</b>
-  <span style="color:green">● Agenda</span> |
-  <span style="color:red">● Segunda</span> |
-  <span style="color:orange">● Terça</span> |
-  <span style="color:gold">● Quarta</span> |
-  <span style="color:purple">● Quinta</span> |
-  <span style="color:black">● Sexta</span> |
-  <span style="color:gray">● Sábado</span> |
-  <span style="color:#f60">🔥 Heatmap</span>
-</div>
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
     <script src="https://unpkg.com/leaflet.heat/dist/leaflet-heat.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/papaparse@5.3.2/papaparse.min.js"></script>
