--- a/index.html
+++ b/index.html
@@ -73,9 +73,11 @@
         <select id="filtroInplant" multiple></select>
         <select id="filtroRede" multiple></select>
         <select id="filtroDia" multiple></select>
-    </div>
+     </div>
+    <button id="botaoHeatmap">Ativar Heatmap</button>
     <div id="map"></div>
     <div id="legenda">
+ <b>Legenda:</b><br>
         <span style="color: green;"><b>•</b> Agenda</span>
         <span style="color: red;"><b>•</b> Segunda</span>
         <span style="color: orange;"><b>•</b> Terça</span>
@@ -86,9 +88,11 @@
         <span style="color: orangered;"><b>🔥</b> Heatmap</span>
     </div>
 
-    <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
+  <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
+    <script src="https://unpkg.com/leaflet.heat/dist/leaflet-heat.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/papaparse@5.3.2/papaparse.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/choices.js/public/assets/scripts/choices.min.js"></script>
+
     <script>
         const url = 'https://raw.githubusercontent.com/marianarizzo/siteambev/main/Planner%20CSV.csv';
         const map = L.map('map').setView([-15.7797, -47.9297], 5);
@@ -103,6 +107,8 @@
             Rede: new Choices('#filtroRede', { removeItemButton: true, placeholderValue: 'Filtrar por Rede' }),
             Dia: new Choices('#filtroDia', { removeItemButton: true, placeholderValue: 'Dia da Semana' })
         };
+
+
 
         const coresPorDia = {
             'Agenda': 'green',
