--- a/index.html
+++ b/index.html
@@ -51,19 +51,29 @@
 
     #legenda {
             position: absolute;
-            top: 12px;
-            right: 12px;
+            bottom: 10px;
+            left: 10px;
             background-color: transparent;
             padding: 6px 10px;
             border-radius: 10px;
             font-size: 11px;
-            color: #333;
+            box-shadow: 0 0 4px rgba(0,0,0,0.1);
         }
 
-        #legenda span {
-            margin-right: 10px;
-            display: inline-block;
+        #botaoHeatmap {
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            z-index: 1000;
+            background-color: white;
+            border: 1px solid #ccc;
+            padding: 6px 12px;
+            border-radius: 10px;
+            cursor: pointer;
+            font-size: 12px;
+            box-shadow: 0 1px 2px rgba(0,0,0,0.15);
         }
+
     </style>
 </head>
 <body>
