--- a/index.html
+++ b/index.html
@@ -50,14 +50,14 @@
         }
 
     #legenda {
-            position: absolute;
+            position: fixed;
             bottom: 10px;
             left: 10px;
             background-color: transparent;
             padding: 6px 10px;
             border-radius: 10px;
             font-size: 11px;
-            box-shadow: 0 0 4px rgba(0,0,0,0.1);
+           
         }
 
         #botaoHeatmap {
