--- a/index.html
+++ b/index.html
@@ -62,7 +62,15 @@
   max-width: 90vw;
 }
 
+#legenda b {
+  display: block;
+  margin-bottom: 5px;
+}
 
+#legenda span {
+  display: block;
+  margin-bottom: 3px;
+}
            
         }
 
