--- a/index.html
+++ b/index.html
@@ -63,11 +63,11 @@
 }
 
 
-#legenda span {
+#legenda b {
   display: block;
-  margin-bottom: 3px;
+  margin-bottom: 5px;
 }
-           
+     
         }
 
         #botaoHeatmap {
