--- a/index.html
+++ b/index.html
@@ -61,17 +61,23 @@
   box-shadow: 0px 1px 4px rgba(0,0,0,0.2);
   max-width: 90vw;
 }
+
+#legenda b {
+  display: block;
+  margin-bottom: 5px;
+}
+
 #legenda span {
   display: block;
   margin-bottom: 3px;
 }
 
-
 @media (max-width: 600px) {
   #legenda {
     font-size: 11px;
     padding: 6px 8px;
-  }   
+  }
+
         }
 
         #botaoHeatmap {
