--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             font-size: 9px;
         }
 #legenda {
-  position: fixed;
+  position: absolute;
   bottom: 10px;
   left: 10px;
   z-index: 9998;
