--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             font-size: 9px;
         }
 #legenda {
-  position: absolute;
+  position: fixed;
   bottom: 10px;
   left: 10px;
   z-index: 9998;
@@ -77,7 +77,9 @@
     font-size: 11px;
     padding: 6px 8px;
   }
-
+}
+</style>
+<div class="folium-map" id="map_3e957a8cffea5c02a02e3640cbb3ea47"></div>
         }
 
         #botaoHeatmap {
