--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             font-size: 9px;
         }
 #legenda {
-  position: fixed;
+  position: absolute;
   bottom: 10px;
   left: 10px;
   z-index: 9998;
@@ -78,9 +78,7 @@
     padding: 6px 8px;
   }
 }
-</style>
-<div class="folium-map" id="map_3e957a8cffea5c02a02e3640cbb3ea47"></div>
-        }
+
 
         #botaoHeatmap {
             position: absolute;
