--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
 #legenda {
   position: absolute;
   bottom: 10px;
-  left: 10px;
+  left: 50%;
+  transform: translateX(-50%);
   z-index: 9998;
   background: white;
   border: 1px solid gray;
@@ -60,23 +61,7 @@
   font-size: 13px;
   box-shadow: 0px 1px 4px rgba(0,0,0,0.2);
   max-width: 90vw;
-}
-
-#legenda b {
-  display: block;
-  margin-bottom: 5px;
-}
-
-#legenda span {
-  display: block;
-  margin-bottom: 3px;
-}
-
-@media (max-width: 600px) {
-  #legenda {
-    font-size: 11px;
-    padding: 6px 8px;
-  }
+  text-align: center;
 }
 
 
