--- a/index.html
+++ b/index.html
@@ -55,11 +55,10 @@
   transform: translateX(-50%);
   z-index: 9998;
   background: white;
-  border: 1px solid gray;
-  padding: 8px 10px;
+  padding: 6px 10px;
   border-radius: 8px;
-  font-size: 13px;
-  box-shadow: 0px 1px 4px rgba(0,0,0,0.2);
+  font-size: 11px;
+  box-shadow: 0 1px 2px rgba(0,0,0,0.15);
   max-width: 90vw;
   text-align: center;
 }
