--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
   left: 50%;
   transform: translateX(-50%);
   z-index: 9998;
-  background: white;
-  padding: 6px 10px;
-  border-radius: 8px;
+  background: transparent; /* remove o fundo branco */
+  padding: 0; /* remove o recuo interno */
+  border-radius: 0; /* remove cantos arredondados, se não quiser, pode manter */
   font-size: 11px;
-  box-shadow: 0 1px 2px rgba(0,0,0,0.15);
+  box-shadow: none; /* remove sombra */
   max-width: 90vw;
   text-align: center;
 }
