--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
   transform: translateX(-50%);
   z-index: 9998;
   background: transparent; /* remove o fundo branco */
-  padding: 0; /* remove o recuo interno */
-  border-radius: 0; /* remove cantos arredondados, se não quiser, pode manter */
+ padding: 6px 10px /* remove o recuo interno */
+   border-radius: 10px; /* remove cantos arredondados, se não quiser, pode manter */
   font-size: 11px;
-  box-shadow: none; /* remove sombra */
+box-shadow: 0 0 4px rgba(0,0,0,0.1); /* remove sombra */
   max-width: 90vw;
   text-align: center;
 }
@@ -77,7 +77,10 @@
             font-size: 12px;
             box-shadow: 0 1px 2px rgba(0,0,0,0.15);
         }
-
+#legenda span {
+  display: block;
+  margin-bottom: 3px;
+}
     </style>
 </head>
 <body>
