--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@ box-shadow: 0 0 4px rgba(0,0,0,0.1); /* remove sombra */
             font-size: 12px;
             box-shadow: 0 1px 2px rgba(0,0,0,0.15);
         }
-#legenda span {
+#legenda b {
   display: block;
-  margin-bottom: 3px;
+  margin-bottom: 5px;
 }
     </style>
 </head>
