--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             margin: 0;
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen;
         }
-        #map { height: 90vh; width: 100%; }
+       #map {position:absolute;top:0;bottom:0;right:0;left:0;}
 
 
         .filtros {
@@ -77,10 +77,7 @@ box-shadow: 0 0 4px rgba(0,0,0,0.1); /* remove sombra */
             font-size: 12px;
             box-shadow: 0 1px 2px rgba(0,0,0,0.15);
         }
-#legenda b {
-  display: block;
-  margin-bottom: 5px;
-}
+
     </style>
 </head>
 <body>
