--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   left: 50%;
   transform: translateX(-50%);
   z-index: 9998;
-  background: transparent; /* remove o fundo branco */
+  background: white; /* remove o fundo branco */
  padding: 6px 10px /* remove o recuo interno */
    border-radius: 10px; /* remove cantos arredondados, se não quiser, pode manter */
   font-size: 11px;
