--- a/index.html
+++ b/index.html
@@ -51,14 +51,14 @@
 #legenda {
   position: absolute;
   bottom: 10px;
-  left: 50%;
-  transform: translateX(-50%);
+  left: 10px;
   z-index: 9998;
-  background: white; /* remove o fundo branco */
- padding: 6px 10px /* remove o recuo interno */
-   border-radius: 10px; /* remove cantos arredondados, se não quiser, pode manter */
-  font-size: 11px;
-box-shadow: 0 0 4px rgba(0,0,0,0.1); /* remove sombra */
+  background: white;
+  border: 1px solid gray;
+  padding: 8px 10px;
+  border-radius: 8px;
+  font-size: 13px;
+  box-shadow: 0px 1px 4px rgba(0,0,0,0.2);
   max-width: 90vw;
   text-align: center;
 }
