--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
   position: absolute;
   bottom: 10px;
   left: 10px;
+  transform: translateX(-50%);
   z-index: 9998;
   background: white;
   border: 1px solid gray;
