--- a/index.html
+++ b/index.html
@@ -63,7 +63,10 @@
   max-width: 90vw;
   text-align: center;
 }
-
+#legenda b {
+  display: block;
+  margin-bottom: 5px;
+}
 
         #botaoHeatmap {
             position: absolute;
